applications/production/www/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
  labels:
    app: webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
        tier: backend
        track: stable
    spec:
      restartPolicy: Always
      volumes:
        - name: nginx-pv-storage
          persistentVolumeClaim:
            claimName: nfs-pvc
      containers:
        - name: webserver
          image: nginx
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 200m
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: nginx-pv-storage
          ports:
            - name: http-port
              containerPort: 80
