applications/production/www/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  selector:
    app: webserver
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-port
