applications/production/www/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.patrick-evers.nl
        - patrick-evers.nl
      secretName: website
  rules:
    - host: www.patrick-evers.nl
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: webserver
                port:
                  number: 80
